force-app/main/default/objects/Case/fields/Gusto_Global_Country__c.field-meta.xml
<CustomField>
    <fullName>Gusto_Global_Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>Philippines</fullName>
            </value>
            <value>
                <fullName>Mexico</fullName>
            </value>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>Brazil</fullName>
            </value>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>Spain</fullName>
            </value>
            <value>
                <fullName>Ireland</fullName>
            </value>
            <value>
                <fullName>Netherlands</fullName>
            </value>
            <value>
                <fullName>Portugal</fullName>
            </value>
            <value>
                <fullName>Germany</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>