force-app/main/default/objects/Case/fields/HI_Integration_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>HI_Integration_Error_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>HI Integration Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>