force-app/main/default/objects/Case/fields/HSA_UUID__c.field-meta.xml
<CustomField>
    <fullName>HSA_UUID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>HSA UUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>