force-app/main/default/objects/Case/fields/HTML_Description__c.field-meta.xml
<CustomField>
    <fullName>HTML_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>HTML Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>