force-app/main/default/objects/Case/fields/In_App_Notice__c.field-meta.xml
<CustomField>
    <fullName>In_App_Notice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In App Notice?</label>
    <type>Checkbox</type>
</CustomField>