force-app/main/default/objects/Case/fields/Incoming_Email_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Incoming_Email_Received_Date__c</fullName>
    <label>Incoming Email Received Date</label>
    <type>Date</type>
</CustomField>