force-app/main/default/objects/Case/fields/Insufficient_Proof_Reason__c.field-meta.xml
<CustomField>
    <fullName>Insufficient_Proof_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Insufficient Proof Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>