force-app/main/default/objects/Case/fields/Integration_Key__c.field-meta.xml
<CustomField>
    <fullName>Integration_Key__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Integration Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>