force-app/main/default/objects/Case/fields/Internal_AI_Processed__c.field-meta.xml
<CustomField>
    <fullName>Internal_AI_Processed__c</fullName>
    <label>Internal AI Processed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>