force-app/main/default/objects/Case/fields/Is_Case_Manual_Create__c.field-meta.xml
<CustomField>
    <fullName>Is_Case_Manual_Create__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to see whether a case is created manually</description>
    <label>Is Case Manual Create</label>
    <type>Checkbox</type>
</CustomField>