force-app/main/default/objects/Case/fields/Is_Customer__c.field-meta.xml
<CustomField>
    <fullName>Is_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is check if the case ownership is changed from sales case to any other record type.</description>
    <label>Is Customer</label>
    <type>Checkbox</type>
</CustomField>