force-app/main/default/objects/Case/fields/IVR_Intent_Grouping__c.field-meta.xml
<CustomField>
    <fullName>IVR_Intent_Grouping__c</fullName>
    <label>IVR Intent Grouping</label>
    <length>255</length>
    <type>Text</type>
</CustomField>