force-app/main/default/objects/Case/fields/IVR_Transcript__c.field-meta.xml
<CustomField>
    <fullName>IVR_Transcript__c</fullName>
    <label>IVR Transcript</label>
    <length>255</length>
    <type>Text</type>
</CustomField>