force-app/main/default/objects/Case/fields/JIRA_ID__c.field-meta.xml
<CustomField>
    <fullName>JIRA_ID__c</fullName>
    <description>Payroll Compliance tracks to LSI events</description>
    <encryptionScheme>None</encryptionScheme>
    <label>JIRA ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>