force-app/main/default/objects/Case/fields/Large_Scale_Issue__c.field-meta.xml
<CustomField>
    <fullName>Large_Scale_Issue__c</fullName>
    <label>Large Scale Issue</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TaxOps</fullName>
            </value>
            <value>
                <fullName>Pufferfish</fullName>
            </value>
            <value>
                <fullName>MasterTax</fullName>
            </value>
            <value>
                <fullName>EPD</fullName>
            </value>
            <value>
                <fullName>Agency Error</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>No LSI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>