force-app/main/default/objects/Case/fields/Last_Employee_Hired__c.field-meta.xml
<CustomField>
    <fullName>Last_Employee_Hired__c</fullName>
    <description>CCPA. For Admin user type. The name of the last employee this Admin requester hired.</description>
    <label>Last Employee Hired</label>
    <length>80</length>
    <type>Text</type>
</CustomField>