force-app/main/default/objects/Case/fields/Latest_Successful_Callback_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Latest_Successful_Callback_Timestamp__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Latest Successful Callback Timestamp</label>
    <type>DateTime</type>
</CustomField>