force-app/main/default/objects/Case/fields/Life_UUID__c.field-meta.xml
<CustomField>
    <fullName>Life_UUID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Life UUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>