force-app/main/default/objects/Case/fields/Long_Term_Disability_UUID__c.field-meta.xml
<CustomField>
    <fullName>Long_Term_Disability_UUID__c</fullName>
    <label>Long Term Disability UUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>