force-app/main/default/objects/Case/fields/LSI__c.field-meta.xml
<CustomField>
    <fullName>LSI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LSI?</label>
    <type>Checkbox</type>
</CustomField>