force-app/main/default/objects/Case/fields/Mass_Email_Step__c.field-meta.xml
<CustomField>
    <fullName>Mass_Email_Step__c</fullName>
    <label>Automation Triggered</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>First Response</fullName>
            </value>
            <value>
                <fullName>Follow up</fullName>
            </value>
            <value>
                <fullName>Resolution</fullName>
            </value>
            <value>
                <fullName>Skip Email Alert</fullName>
            </value>
            <value>
                <fullName>Tax Res Ready for Checklist Email</fullName>
            </value>
            <value>
                <fullName>Tax Res Research in progress Email</fullName>
            </value>
            <value>
                <fullName>No Notice Attached Auto-Solve fired</fullName>
            </value>
            <value>
                <fullName>SUI Rate Auto-Solve fired</fullName>
            </value>
            <value>
                <fullName>Skip Ready for Checklist Email</fullName>
            </value>
            <value>
                <fullName>Skip Research in progress Email</fullName>
            </value>
            <value>
                <fullName>Prior to Gusto Auto-Solve fired</fullName>
            </value>
            <value>
                <fullName>After Gusto Auto-Solve fired</fullName>
            </value>
            <value>
                <fullName>Duplicate Notice Auto-Solve fired</fullName>
            </value>
            <value>
                <fullName>Duplicate Notice F/P Check</fullName>
            </value>
            <value>
                <fullName>Previously Answered Auto-Solve Fired</fullName>
            </value>
            <value>
                <fullName>Previously Answered Auto-Solve Fired Closed/Solved</fullName>
            </value>
            <value>
                <fullName>Below Tolerance Auto-Solve fired</fullName>
            </value>
            <value>
                <fullName>DE6601/DE2176 Merge</fullName>
            </value>
            <value>
                <fullName>P&amp;I Late Deposit/Amendment Auto-Solve Fired</fullName>
            </value>
            <value>
                <fullName>P&amp;I Late Deposit/Amendment Partial Auto-Solve Fired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>