force-app/main/default/objects/Case/fields/Medical_UUID__c.field-meta.xml
<CustomField>
    <fullName>Medical_UUID__c</fullName>
    <label>Medical UUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>