force-app/main/default/objects/Case/fields/MF_Coverage_End_Date__c.field-meta.xml
<CustomField>
    <fullName>MF_Coverage_End_Date__c</fullName>
    <label>MF Coverage End Date</label>
    <type>Date</type>
</CustomField>