force-app/main/default/objects/Case/fields/MF_Coverage_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>MF_Coverage_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MF Coverage Start Date</label>
    <type>Date</type>
</CustomField>