force-app/main/default/objects/Case/fields/MF_Group_Number__c.field-meta.xml
<CustomField>
    <fullName>MF_Group_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>MF Group Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>