force-app/main/default/objects/Case/fields/MF_Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>MF_Policy_Number__c</fullName>
    <externalId>true</externalId>
    <label>MF Policy Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>