force-app/main/default/objects/Case/fields/Missing_Form_Attributes__c.field-meta.xml
<CustomField>
    <fullName>Missing_Form_Attributes__c</fullName>
    <description>Fields which are not populated on forms</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Missing Form Attributes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>