force-app/main/default/objects/Case/fields/Name_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Business__c</fullName>
    <description>CCPA. For Contractor (Individual) user type. Name of the business they work for.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Name of Business</label>
    <length>255</length>
    <type>Text</type>
</CustomField>