force-app/main/default/objects/Case/fields/Next_Business_Day__c.field-meta.xml
<CustomField>
    <fullName>Next_Business_Day__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Next Business Day</label>
    <type>Date</type>
</CustomField>