force-app/main/default/objects/Case/fields/Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps__c</fullName>
    <label>Next Steps</label>
    <length>255</length>
    <type>Text</type>
</CustomField>