force-app/main/default/objects/Case/fields/NICE_Interaction__c.field-meta.xml
<CustomField>
    <fullName>NICE_Interaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NICE Interaction</label>
    <referenceTo>NICE_Interaction__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>