force-app/main/default/objects/Case/fields/Non_English_Preferred_Language__c.field-meta.xml
<CustomField>
    <fullName>Non_English_Preferred_Language__c</fullName>
    <label>Non English Preferred Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Spanish</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>