force-app/main/default/objects/Case/fields/Notice_Analyst_Escalation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Notice_Analyst_Escalation_Reason__c</fullName>
    <description>Used for &quot;Tax Res&quot; escalation to Captain</description>
    <label>Notice Analyst Escalation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unfamiliar notice</fullName>
            </value>
            <value>
                <fullName>Unsure about checklist item</fullName>
            </value>
            <value>
                <fullName>Can&apos;t complete checklist item</fullName>
            </value>
            <value>
                <fullName>Unsure about customer ask</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>