force-app/main/default/objects/Case/fields/Notice_Period__c.field-meta.xml
<CustomField>
    <fullName>Notice_Period__c</fullName>
    <label>Notice Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Notice_Period</valueSetName>
    </valueSet>
</CustomField>