force-app/main/default/objects/Case/fields/Notice_Response_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Notice_Response_Deadline__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Notice Response Deadline</label>
    <type>Date</type>
</CustomField>