force-app/main/default/objects/Case/fields/Notice_Type__c.field-meta.xml
<CustomField>
    <fullName>Notice_Type__c</fullName>
    <description>For Tax Res Functionality</description>
    <label>Notice Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Credit listed or refund check</fullName>
            </value>
            <value>
                <fullName>E-filing or e-Payment request</fullName>
            </value>
            <value>
                <fullName>Form filing schedule update</fullName>
            </value>
            <value>
                <fullName>Missing or late filing</fullName>
            </value>
            <value>
                <fullName>Missing or late payment</fullName>
            </value>
            <value>
                <fullName>Not listed</fullName>
            </value>
            <value>
                <fullName>Tax deposit schedule update</fullName>
            </value>
            <value>
                <fullName>Tax Rate Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>