force-app/main/default/objects/Case/fields/Number_of_Audit_Logs_Static__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Audit_Logs_Static__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Static field to hold value for Number of Audit Logs.</description>
    <label>Number of Audit Logs Static</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>