force-app/main/default/objects/Case/fields/NumberOfAuthTries__c.field-meta.xml
<CustomField>
    <fullName>NumberOfAuthTries__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NumberOfAuthTries</label>
    <length>60</length>
    <type>Text</type>
</CustomField>