force-app/main/default/objects/Case/fields/OCR_Message__c.field-meta.xml
<CustomField>
    <fullName>OCR_Message__c</fullName>
    <description>This will be used by OCR (via Instabase)</description>
    <label>IDP Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>