force-app/main/default/objects/Case/fields/OCR_Status__c.field-meta.xml
<CustomField>
    <fullName>OCR_Status__c</fullName>
    <description>This will be used by OCR (Instabase)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>OCR Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>