force-app/main/default/objects/Case/fields/Onboarding_Close_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Close_DateTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Onboarding Close DateTime</label>
    <type>DateTime</type>
</CustomField>