force-app/main/default/objects/Case/fields/Open_Enrollment_End__c.field-meta.xml
<CustomField>
    <fullName>Open_Enrollment_End__c</fullName>
    <formula>Benefit_Order__r.Open_Enrollment_End_Date__c</formula>
    <label>Open Enrollment End</label>
    <type>Date</type>
</CustomField>