force-app/main/default/objects/Case/fields/Opportunity_Submission_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Submission_Deadline__c</fullName>
    <formula>Opportunity__r.Submission_Deadline__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Submission Deadline</label>
    <type>Date</type>
</CustomField>