force-app/main/default/objects/Case/fields/ORCA_Predicted_Specialization_Confidence__c.field-meta.xml
<CustomField>
    <fullName>ORCA_Predicted_Specialization_Confidence__c</fullName>
    <description>Holds ORCA Predicted Specialization Confidence</description>
    <label>ORCA Predicted Specialization Confidence</label>
    <length>10</length>
    <type>Text</type>
</CustomField>