force-app/main/default/objects/Case/fields/ORCA_Predicted_Support_Level__c.field-meta.xml
<CustomField>
    <fullName>ORCA_Predicted_Support_Level__c</fullName>
    <description>This field stores the case skill level passed from the internal NLP model, ORCA via Workato.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ORCA Predicted Support Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>