force-app/main/default/objects/Case/fields/Order_AE_Email__c.field-meta.xml
<CustomField>
    <fullName>Order_AE_Email__c</fullName>
    <description>Agent Email from the Order</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Agent Email from the Order</inlineHelpText>
    <label>Order AE Email</label>
    <type>Email</type>
</CustomField>