force-app/main/default/objects/Case/fields/Order_Contractor_Count__c.field-meta.xml
<CustomField>
    <fullName>Order_Contractor_Count__c</fullName>
    <description>Displays Contractor count on related order</description>
    <formula>Order__r.Contractor_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Contractor Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>