force-app/main/default/objects/Case/fields/Order_First_Check_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_First_Check_Date__c</fullName>
    <formula>Order__r.First_Check_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order First Check Date</label>
    <type>Date</type>
</CustomField>