force-app/main/default/objects/Case/fields/Order_Notification__c.field-meta.xml
<CustomField>
    <fullName>Order_Notification__c</fullName>
    <description>To notify customer based on order status/checklist progress.</description>
    <label>Order Notification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Intro Email</fullName>
            </value>
            <value>
                <fullName>Intro Email - ADP Run</fullName>
            </value>
            <value>
                <fullName>Intro Email - IOP/QBOI</fullName>
            </value>
            <value>
                <fullName>Intro Email - IOP/QBOI - Admin</fullName>
            </value>
            <value>
                <fullName>Intro Email - Exception Request</fullName>
            </value>
            <value>
                <fullName>Employees Onboarded</fullName>
            </value>
            <value>
                <fullName>Payroll History</fullName>
            </value>
            <value>
                <fullName>Final Step Not Completed</fullName>
            </value>
            <value>
                <fullName>Post Risk Approval</fullName>
            </value>
            <value>
                <fullName>Run Payroll</fullName>
            </value>
            <value>
                <fullName>Handoff To Care</fullName>
            </value>
            <value>
                <fullName>Handoff To Concierge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>