force-app/main/default/objects/Case/fields/Order_Owner_Calendly_Link__c.field-meta.xml
<CustomField>
    <fullName>Order_Owner_Calendly_Link__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Order Owner Calendly Link</label>
    <type>Url</type>
</CustomField>