force-app/main/default/objects/Case/fields/Order_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Order_Owner_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Order Owner Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>