force-app/main/default/objects/Case/fields/Order_Owner_Phone__c.field-meta.xml
<CustomField>
    <fullName>Order_Owner_Phone__c</fullName>
    <description>Field to be used in Email templates to show phone number of order owner in signature.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Order Owner Phone</label>
    <type>Phone</type>
</CustomField>