force-app/main/default/objects/Case/fields/Order_Owner_Phone_Extension__c.field-meta.xml
<CustomField>
    <fullName>Order_Owner_Phone_Extension__c</fullName>
    <description>Use to store Order&apos;s owner&apos;s phone &amp; extension from User record.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Order Owner Phone Extension</label>
    <length>10</length>
    <type>Text</type>
</CustomField>