force-app/main/default/objects/Case/fields/Other_Case_Reason_Description__c.field-meta.xml
<CustomField>
    <fullName>Other_Case_Reason_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Case Reason Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>