force-app/main/default/objects/Case/fields/Otter_Audit_Type__c.field-meta.xml
<CustomField>
    <fullName>Otter_Audit_Type__c</fullName>
    <label>Otter Audit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2% Shareholders</fullName>
            </value>
            <value>
                <fullName>Exemption Status Changed Previous Quarter</fullName>
            </value>
            <value>
                <fullName>Unusual Exemption Detected</fullName>
            </value>
            <value>
                <fullName>All Employees Are Exempt</fullName>
            </value>
            <value>
                <fullName>Company With All Exempt Employees Added Non-exempt Employee</fullName>
            </value>
            <value>
                <fullName>SSN Changed for Employee</fullName>
            </value>
            <value>
                <fullName>EIN Changed</fullName>
            </value>
            <value>
                <fullName>Change Needed to Tax Liabilities (Historical)</fullName>
            </value>
            <value>
                <fullName>Change Needed to Tax Liabilities (Employee State Change)</fullName>
            </value>
            <value>
                <fullName>Missed First Payroll</fullName>
            </value>
            <value>
                <fullName>Dependent Gains Other Coverage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>