force-app/main/default/objects/Case/fields/Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>Owner_Id__c</fullName>
    <formula>OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Id (Formula)</label>
    <type>Text</type>
</CustomField>