force-app/main/default/objects/Case/fields/p_i__c.field-meta.xml
<CustomField>
    <fullName>p_i__c</fullName>
    <label>p&amp;i</label>
    <length>255</length>
    <type>Text</type>
</CustomField>