force-app/main/default/objects/Case/fields/Panda_Company_URL__c.field-meta.xml
<CustomField>
    <fullName>Panda_Company_URL__c</fullName>
    <formula>IF(Not(ISBLANK(Account.ZP_Firm_ID__c)),&quot;accounting_firms/&quot;,IF(Not(ISBLANK(Account.ZP_Company_ID__c)),&quot;companies/&quot;,&quot;&quot;))&amp;IF(Not(ISBLANK(Account.ZP_Firm_ID__c)),Account.ZP_Firm_ID__c,IF(Not(ISBLANK(Account.ZP_Company_ID__c)),Account.ZP_Company_ID__c,&quot;&quot;))</formula>
    <label>Panda Company URL</label>
    <type>Text</type>
</CustomField>