force-app/main/default/objects/Case/fields/Partner_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Partner_Record_Id__c</fullName>
    <externalId>true</externalId>
    <label>Partner Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>