force-app/main/default/objects/Case/fields/Partner_Record_Status__c.field-meta.xml
<CustomField>
    <fullName>Partner_Record_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Partner Record Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>