force-app/main/default/objects/Case/fields/Partner_Tier__c.field-meta.xml
<CustomField>
    <fullName>Partner_Tier__c</fullName>
    <description>This field is created to capture partner tier for a given accounting firm</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Partner Tier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>