force-app/main/default/objects/Case/fields/Payment_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Due_Date__c</fullName>
    <description>(Pre-populated text is MM/DD/YYYY) is passed as the attributes on Additional Data json field on the GF ticket object</description>
    <label>Payment Due Date</label>
    <type>Date</type>
</CustomField>