force-app/main/default/objects/Case/fields/Payment_Investigation_ID__c.field-meta.xml
<CustomField>
    <fullName>Payment_Investigation_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payment Investigation ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>