force-app/main/default/objects/Case/fields/Penalties_Interest_Assessed__c.field-meta.xml
<CustomField>
    <fullName>Penalties_Interest_Assessed__c</fullName>
    <label>Penalties &amp; Interest Assessed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$0-500</fullName>
            </value>
            <value>
                <fullName>$501-1000</fullName>
            </value>
            <value>
                <fullName>$1000+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>