force-app/main/default/objects/Case/fields/Period_Prior_to_Gusto__c.field-meta.xml
<CustomField>
    <fullName>Period_Prior_to_Gusto__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Period Prior to Gusto</label>
    <type>Checkbox</type>
</CustomField>