force-app/main/default/objects/Case/fields/Play_Mode_Type__c.field-meta.xml
<CustomField>
    <fullName>Play_Mode_Type__c</fullName>
    <description>Type of Play Mode used to assign Owner. For Reporting purposes.</description>
    <label>Play Mode Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Swimlane</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>