force-app/main/default/objects/Case/fields/Privacy_Requester_Data__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Requester_Data__c</fullName>
    <description>Privacy Requests. Data Collection records&apos; Details will be put in here.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Privacy Requester Data</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>