force-app/main/default/objects/Case/fields/Privacy_Requester_Email__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Requester_Email__c</fullName>
    <description>Privacy Requester&apos;s email address</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Privacy Requester Email</label>
    <type>Email</type>
</CustomField>