force-app/main/default/objects/Case/fields/Privacy_Requester_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Requester_Last_Name__c</fullName>
    <description>Privacy Requester&apos;s last name</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Requester Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>